--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ script:
   - git config --global user.email "mbryzek@test.foo"
   - git config --global user.name "Mike"
   - cd test && ./run.rb
+services:
+  - docker
+before_script:
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - docker run -d -p 127.0.0.1:5432:5432 flowcommerce/apibuilder-postgresql:latest
 branches:
   only:
     - master
